# arduino-server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
arduino/: arduino.ino
cpp-backend/: CMakeLists.txt  Makefile
cpp-backend/dependencies/libserial/: CMakeLists.txt  Makefile
cpp-backend/dependencies/libserial/include/libserial/: SerialPortConstants.h
cpp-backend/src/: CommandParser.cpp  CommandParser.hpp  PinControl.cpp  PinControl.hpp  main.cpp
cpp-frontend/: CMakeLists.txt
cpp-frontend/src/: App.cpp  App.hpp  main.cpp
docs/: simple-README-linux.md
js-server/: arduino_lib.js  index.html  index.js  package-lock.json  server.js  style.css
libfrontend/: CMakeLists.txt
libfrontend/include/: PinControl.hpp  Server.hpp
libfrontend/src/: HTTPRequest.hpp  PinControl.cpp  Server.cpp  ServerInternal.hpp
scripts/: gen-release-linux-aarch64.sh  gen-release-linux-x86_64.sh  run-linux.sh
